fix font not showing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap');
+*{
+  font-family: "Source Code Pro", monospace;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
+
+
 .profile-pic {
   position: relative;
   max-width:130px;
